# snake

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SnakeAssets.qrc  main.cpp  snake.qml
.cache/clangd/index/: main.cpp.888686D0249A131E.idx
Assets/Eternal-Ceremony/: Interact.webm  Move.webm  Relax.webm  Sit.webm  Sleep.webm  Special.webm
Assets/Eternal-Ceremony/webm/: Interact-left.webm  Interact-right.webm  Move-left.webm  Move-right.webm  Relax-left.webm  Relax-right.webm  Sit-left.webm  Sit-right.webm  Sleep-left.webm  Sleep-right.webm  Special-left.webm
Assets/Influences-Through-the-Ages/: Interact.webm  Move.webm  Relax.webm  Sit.webm  Sleep.webm
Assets/Influences-Through-the-Ages/webm/: Interact-left.webm  Interact-right.webm  Move-left.webm  Move-right.webm  Relax-left.webm  Relax-right.webm  Sit-left.webm  Sit-right.webm  Sleep-left.webm  Sleep-right.webm  Special-left.webm
Doc/: README_CN.md
Qmls/: Main.qml  Settings.qml  snake.qml
Qmls/Setting/: Settings.qml  StyleManager.qml  qmldir
Qmls/Snakes/: Snake.qml  SnakeController.qml  SnakeGif.qml  SnakeMenu.qml  SnakeWindow.qml  SnakeWindowController.qml
